# pluto

./: Cargo.toml  LICENSE.md  README.md  a.po  a.py  test.po  test_features.po
examples/: calculator.po
src/: main.rs
src/builtins/: builtins.rs
src/constants/: token.rs
src/evaluator/: evaluator.rs
src/lexer/: tokenizer.rs
src/parser/: ast.rs  parser.rs
src/repl/: repl.rs
src/utils/: args.rs  colors.rs  mod.rs
tests/: features.po  test.po  test2.po
