[package]
name = "pluto-lang"
version = "0.2.2"
edition = "2024"
description = "A interpreted programming language made in Rust"
keywords = ["rust", "interpreter", "language"]
license-file = "LICENSE"
categories = ["compilers"]
readme = "README.md"
repository = "https://github.com/mi66mc/pluto"

[dependencies]
